Resim yollari duzeltildi

--- a/haliyikamarehberi.html
+++ b/haliyikamarehberi.html
@@ -22,14 +22,14 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Halıdaki Zorlu Lekelere Kesin Çözüm Yöntemleri">
     <meta property="og:description" content="Halılarınızdaki lekeleri çıkarmak için profesyonel sırları açıkladık. Okumak için tıklayın.">
-    <meta property="og:image" content="https://www.viptemizlikankara.com/temizlik/img/hali-leke-kapak.jpg">
+    <meta property="og:image" content="https://www.viptemizlikankara.comimg/hali-leke-kapak.jpg">
     <meta property="og:url" content="https://www.viptemizlikankara.com/haliyikamarehberi.html">
     <meta property="og:site_name" content="VIP Temizlik Ankara">
     
     <meta property="article:author" content="VIP Temizlik Ekibi">
     <meta property="article:published_time" content="2025-12-17">
 
-    <link rel="icon" type="image/png" href="/temizlik/img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <script type="application/ld+json">
@@ -42,7 +42,7 @@
       },
       "headline": "Halıdaki İnatçı Lekeler Nasıl Çıkar?",
       "description": "Kahve, çay, yağ veya mürekkep lekesi kabusunuz olmasın. Evde uygulayabileceğiniz basit yöntemler.",
-      "image": "https://www.viptemizlikankara.com/temizlik/img/haliyikamarehberi.jpeg",  
+      "image": "https://www.viptemizlikankara.comimg/haliyikamarehberi.jpeg",  
       "author": {
         "@type": "Organization",
         "name": "VIP Temizlik Ankara",
@@ -53,7 +53,7 @@
         "name": "VIP Temizlik Ankara",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://www.viptemizlikankara.com/temizlik/img/viptemizlikankara.png"
+          "url": "https://www.viptemizlikankara.comimg/viptemizlikankara.png"
         }
       },
       "datePublished": "2025-12-17",
@@ -82,12 +82,12 @@
    <div class="navWrapper">
 
      <a href="index.html" class="desktop-logo">
-            <img src="/temizlik/img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
+            <img src="img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
          </a>
 
       <div class="mobile-header">
         <a href="index.html" class="mobile-logo">
-         <img src="/temizlik/img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
+         <img src="img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
       </a>
          <div class="hamburger-menu" onclick="menuyuAcKapa()">
             <i class="fa-solid fa-bars"></i>
@@ -105,7 +105,7 @@
          <a href="hizmetlerimiz.html" class="nav-item">
             <i class="fa-solid fa-broom"></i>Hizmetlerimiz
          </a>
-         <a href="hakkımızda.html" class="nav-item">
+         <a href="hakkimizda.html" class="nav-item">
             <i class="fa-solid fa-user-group"></i>Hakkımızda
          </a>
          <a href="iletisim.html" class="nav-item">
@@ -145,7 +145,7 @@
             </header>
 
             <div class="article-img" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-                <img src="/temizlik/img/haliyikamarehberi.jpeg" alt="halı yağ lekesi çıkarma">
+                <img src="img/haliyikamarehberi.jpeg" alt="halı yağ lekesi çıkarma">
             </div>
 
             <div class="articleContent" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
@@ -248,7 +248,7 @@
             <h4>Hızlı Erişim</h4>
             <ul>
                 <li><a href="index.html">Anasayfa</a></li>
-                <li><a href="hakkımızda.html">Hakkımızda</a></li>
+                <li><a href="hakkimizda.html">Hakkımızda</a></li>
                 <li><a href="hizmetlerimiz.html">Hizmetlerimiz</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
