--- a/koltuktemizligi.html
+++ b/koltuktemizligi.html
@@ -17,14 +17,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/temizlik/img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 
     <link rel="canonical" href="https://www.viptemizlikankara.com/koltuktemizligi.html" />
     
     <meta property="og:type" content="article">
     <meta property="og:title" content="Koltuklarınızı Silmeyin, Yıkayın!">
     <meta property="og:description" content="Koltuk silmenin zararları ve profesyonel yıkamanın farkları. Yazıyı okuyun.">
-    <meta property="og:image" content="https://www.viptemizlikankara.com/temizlik/img/koltukyikamanasilyapilir.webp">
+    <meta property="og:image" content="https://www.viptemizlikankara.comimg/koltukyikamanasilyapilir.webp">
     <meta property="og:url" content="https://www.viptemizlikankara.com/koltuktemizligi.html">
     <meta property="og:site_name" content="VIP Temizlik Ankara">
     
@@ -42,7 +42,7 @@
       },
       "headline": "Koltuk Temizliğinin Püf Noktaları",
       "description": "Koltuk kumaşını yıpratmadan, kusma yapmadan leke çıkarmanın sırları nelerdir?",
-      "image": "https://www.viptemizlikankara.com/temizlik/img/koltukyikamanasilyapilir.webp",  
+      "image": "https://www.viptemizlikankara.comimg/koltukyikamanasilyapilir.webp",  
       "author": {
         "@type": "Organization",
         "name": "VIP Temizlik Ankara",
@@ -53,7 +53,7 @@
         "name": "VIP Temizlik Ankara",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://www.viptemizlikankara.com/temizlik/img/viptemizlikankara.png"
+          "url": "https://www.viptemizlikankara.comimg/viptemizlikankara.png"
         }
       },
       "datePublished": "2025-12-17",
@@ -80,12 +80,12 @@
     <div class="navWrapper">
 
      <a href="index.html" class="desktop-logo">
-            <img src="/temizlik/img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
+            <img src="img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
          </a>
 
       <div class="mobile-header">
         <a href="index.html" class="mobile-logo">
-         <img src="/temizlik/img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
+         <img src="img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
       </a>
          <div class="hamburger-menu" onclick="menuyuAcKapa()">
             <i class="fa-solid fa-bars"></i>
@@ -103,7 +103,7 @@
          <a href="hizmetlerimiz.html" class="nav-item">
             <i class="fa-solid fa-broom"></i>Hizmetlerimiz
          </a>
-         <a href="hakkımızda.html" class="nav-item">
+         <a href="hakkimizda.html" class="nav-item">
             <i class="fa-solid fa-user-group"></i>Hakkımızda
          </a>
          <a href="iletisim.html" class="nav-item">
@@ -143,7 +143,7 @@
             </header>
 
             <div class="article-img" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-                <img src="/temizlik/img/koltukyikamanasilyapilir.webp" alt="ankara buharlı koltuk yıkama">
+                <img src="img/koltukyikamanasilyapilir.webp" alt="ankara buharlı koltuk yıkama">
             </div>
 
             <div class="articleContent" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
@@ -218,7 +218,7 @@
             <h4>Hızlı Erişim</h4>
             <ul>
                 <li><a href="index.html">Anasayfa</a></li>
-                <li><a href="hakkımızda.html">Hakkımızda</a></li>
+                <li><a href="hakkimizda.html">Hakkımızda</a></li>
                 <li><a href="hizmetlerimiz.html">Hizmetlerimiz</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
