--- a/camsilmetuyolari.html
+++ b/camsilmetuyolari.html
@@ -17,14 +17,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/temizlik/img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 
     <link rel="canonical" href="https://www.viptemizlikankara.com/cam-temizligi-ipuclari.html" />
     
     <meta property="og:type" content="article">
     <meta property="og:title" content="Camlarınız Kristal Gibi Parlasın: İzsiz Temizlik Rehberi">
     <meta property="og:description" content="Güneşi evinize davet edin. Cam temizliğinde yapılan yanlışları ve doğruları anlattık.">
-    <meta property="og:image" content="https://www.viptemizlikankara.com/temizlik/img/camtemizliginasilyapilir.webp">
+    <meta property="og:image" content="https://www.viptemizlikankara.comimg/camtemizliginasilyapilir.webp">
     <meta property="og:url" content="https://www.viptemizlikankara.com/cam-temizligi-ipuclari.html">
     <meta property="og:site_name" content="VIP Temizlik Ankara">
     
@@ -44,7 +44,7 @@
   },
   "headline": "İz Bırakmadan Cam Silme Sanatı",
   "description": "Camlarınızı silerken iz ve dalgalanma kalmasından bıktınız mı? Evde hazırlayabileceğiniz doğal karışımlar ve profesyonel sırlar.",
-  "image": "https://www.viptemizlikankara.com/temizlik/img/camtemizliginasilyapilir.webp",  
+  "image": "https://www.viptemizlikankara.comimg/camtemizliginasilyapilir.webp",  
   "author": {
     "@type": "Organization",
     "name": "VIP Temizlik Ankara",
@@ -55,7 +55,7 @@
     "name": "VIP Temizlik Ankara",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://www.viptemizlikankara.com/temizlik/img/viptemizlikankara.png"
+      "url": "https://www.viptemizlikankara.comimg/viptemizlikankara.png"
     }
   },
   "datePublished": "2025-12-17",
@@ -82,12 +82,12 @@
    <div class="navWrapper">
 
      <a href="index.html" class="desktop-logo">
-            <img src="/temizlik/img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
+            <img src="img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
          </a>
 
       <div class="mobile-header">
         <a href="index.html" class="mobile-logo">
-         <img src="/temizlik/img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
+         <img src="img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
       </a>
          <div class="hamburger-menu" onclick="menuyuAcKapa()">
             <i class="fa-solid fa-bars"></i>
@@ -105,7 +105,7 @@
          <a href="hizmetlerimiz.html" class="nav-item">
             <i class="fa-solid fa-broom"></i>Hizmetlerimiz
          </a>
-         <a href="hakkımızda.html" class="nav-item">
+         <a href="hakkimizda.html" class="nav-item">
             <i class="fa-solid fa-user-group"></i>Hakkımızda
          </a>
          <a href="iletisim.html" class="nav-item">
@@ -145,7 +145,7 @@
             </header>
 
             <div class="article-img" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-                <img src="/temizlik/img/camtemizliginasilyapilir.webp" alt="halı yağ lekesi çıkarma">
+                <img src="img/camtemizliginasilyapilir.webp" alt="halı yağ lekesi çıkarma">
             </div>
 
             <div class="articleContent" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
@@ -211,7 +211,7 @@
             <h4>Hızlı Erişim</h4>
             <ul>
                 <li><a href="index.html">Anasayfa</a></li>
-                <li><a href="hakkımızda.html">Hakkımızda</a></li>
+                <li><a href="hakkimizda.html">Hakkımızda</a></li>
                 <li><a href="hizmetlerimiz.html">Hizmetlerimiz</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
