--- a/evtemizligirehber.html
+++ b/evtemizligirehber.html
@@ -25,7 +25,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Profesyoneller Gibi Ev Temizliği Nasıl Yapılır?">
     <meta property="og:description" content="Temizlik yaparken yorulmayın! İşte işinizi yarı yarıya kolaylaştıracak o taktikler.">
-    <meta property="og:image" content="https://www.viptemizlikankara.com/temizlik/img/ev-temizligi-blog-kapak.jpg">
+    <meta property="og:image" content="https://www.viptemizlikankara.comimg/ev-temizligi-blog-kapak.jpg">
     <meta property="og:url" content="https://www.viptemizlikankara.com/evtemizligirehber.html">
     <meta property="og:site_name" content="VIP Temizlik Ankara">
     
@@ -33,7 +33,7 @@
     <meta property="article:published_time" content="2025-12-17">
     <meta property="article:section" content="Pratik Bilgiler">
 
-    <link rel="icon" type="image/png" href="/temizlik/img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <script type="application/ld+json">
@@ -46,7 +46,7 @@
   },
   "headline": "Detaylı Ev Temizliği Rehberi",
   "description": "Adım adım ev temizliği...",
-  "image": "https://www.viptemizlikankara.com/temizlik/img/evtemizligirehberi.webp",  
+  "image": "https://www.viptemizlikankara.comimg/evtemizligirehberi.webp",  
   "author": {
     "@type": "Organization",
     "name": "VIP Temizlik Ankara",
@@ -57,7 +57,7 @@
     "name": "VIP Temizlik Ankara",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://www.viptemizlikankara.com/temizlik/img/viptemizlikankara.png"
+      "url": "https://www.viptemizlikankara.comimg/viptemizlikankara.png"
     }
   },
   "datePublished": "2025-12-17",
@@ -84,12 +84,12 @@
     <div class="navWrapper">
 
      <a href="index.html" class="desktop-logo">
-            <img src="/temizlik/img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
+            <img src="img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
          </a>
 
       <div class="mobile-header">
         <a href="index.html" class="mobile-logo">
-         <img src="/temizlik/img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
+         <img src="img/viptemizlikankara.png" alt="VIP Temizlik Ankara">
       </a>
          <div class="hamburger-menu" onclick="menuyuAcKapa()">
             <i class="fa-solid fa-bars"></i>
@@ -107,7 +107,7 @@
          <a href="hizmetlerimiz.html" class="nav-item">
             <i class="fa-solid fa-broom"></i>Hizmetlerimiz
          </a>
-         <a href="hakkımızda.html" class="nav-item">
+         <a href="hakkimizda.html" class="nav-item">
             <i class="fa-solid fa-user-group"></i>Hakkımızda
          </a>
          <a href="iletisim.html" class="nav-item">
@@ -147,7 +147,7 @@
             </header>
 
             <div class="article-img" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-                <img src="/temizlik/img/evtemizliginasılyapılır.webp" alt="ankara detaylı ev temizliği ve bahar temizliği aşamaları">
+                <img src="img/evtemizliginasılyapılır.webp" alt="ankara detaylı ev temizliği ve bahar temizliği aşamaları">
             </div>
 
             <div class="articleContent" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
@@ -222,7 +222,7 @@
             <h4>Hızlı Erişim</h4>
             <ul>
                 <li><a href="index.html">Anasayfa</a></li>
-                <li><a href="hakkımızda.html">Hakkımızda</a></li>
+                <li><a href="hakkimizda.html">Hakkımızda</a></li>
                 <li><a href="hizmetlerimiz.html">Hizmetlerimiz</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
