Resim yollari duzeltildi

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
              </div>
              <p class="yorumMetni">Ekip tam saatinde geldi ve çok titiz çalıştı. Evim mis gibi kokuyor, kesinlikle tavsiye ederim.</p>
              <div class="müsteriBilgi">
-                <img loading="lazy" src="/araba/resimler/müsteri.png" alt="Müşteri">
+                <img loading="lazy" src="/araba/resimler/musteri.png" alt="Müşteri">
                 <span>Bengü Atıcı</span>
              </div>
             </div>
@@ -241,7 +241,7 @@
              </div>
              <p class="yorumMetni">Ofisimiz için düzenli hizmet alıyoruz. Çok profesyoneller, işimiz aksamadan tertemiz bir ortam sağlıyorlar.</p>
              <div class="müsteriBilgi">
-                <img loading="lazy" src="/araba/resimler/müsteri.png" alt="Müşteri">
+                <img loading="lazy" src="/araba/resimler/musteri.png" alt="Müşteri">
                 <span>Zeynep Demir</span>
              </div>
             </div>
@@ -252,7 +252,7 @@
              </div>
              <p class="yorumMetni">İnşaat sonrası temizlik için çağırdım. O kadar moloz ve leke nasıl çıktı inanamadım, elinize sağlık.</p>
              <div class="müsteriBilgi">
-                <img loading="lazy" src="/araba/resimler/müsteri.png" alt="Müşteri">
+                <img loading="lazy" src="/araba/resimler/musteri.png" alt="Müşteri">
                 <span>Gizem Duru</span>
              </div>
             </div>
@@ -396,7 +396,7 @@
     <section class="griArkaPlanKutusu">
     <div class="videoPanel" data-aos="zoom-in" data-aos-duration="1000">
         <video autoplay muted loop playsinline id="bgVideo" poster="img/video-kapak-resmi.jpg">
-         <source src="/temizlik/video/ankaraprofesyoneltemizlik.mp4">
+         <source src="video/ankaraprofesyoneltemizlik.mp4">
         </video>
         <div class="videoOverlay"></div>
         <div class="videoText" data-aos="fade-up" data-aos-delay="500">
