--- a/blog.html
+++ b/blog.html
@@ -22,11 +22,11 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Temizlik Hakkında Her Şey - VIP Temizlik Blog">
     <meta property="og:description" content="Leke çıkarma tekniklerinden, detaylı ev temizliği planlamasına kadar uzman tavsiyeleri.">
-    <meta property="og:image" content="https://www.viptemizlikankara.comimg/blog-genel-kapak.jpg">
+    <meta property="og:image" content="https://www.viptemizlikankara.com/img/evtemizlikipucları.webp">
     <meta property="og:url" content="https://www.viptemizlikankara.com/blog.html">
     <meta property="og:site_name" content="VIP Temizlik Ankara">
     
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/viptemizlikankara.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <script type="application/ld+json">
@@ -268,6 +268,7 @@
                 <li><a href="hakkimizda.html">Hakkımızda</a></li>
                 <li><a href="hizmetlerimiz.html">Hizmetlerimiz</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </div>
 
