--- a/evtemizligirehber.html
+++ b/evtemizligirehber.html
@@ -25,7 +25,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Profesyoneller Gibi Ev Temizliği Nasıl Yapılır?">
     <meta property="og:description" content="Temizlik yaparken yorulmayın! İşte işinizi yarı yarıya kolaylaştıracak o taktikler.">
-    <meta property="og:image" content="https://www.viptemizlikankara.comimg/ev-temizligi-blog-kapak.jpg">
+    <meta property="og:image" content="https://www.viptemizlikankara.comimg/evtemizliginasılyapılır.webp">
     <meta property="og:url" content="https://www.viptemizlikankara.com/evtemizligirehber.html">
     <meta property="og:site_name" content="VIP Temizlik Ankara">
     
@@ -33,7 +33,7 @@
     <meta property="article:published_time" content="2025-12-17">
     <meta property="article:section" content="Pratik Bilgiler">
 
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/viptemizlikankara.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <script type="application/ld+json">
