--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -20,11 +20,11 @@
     
     <meta property="og:title" content="Ankara'nın En Güvenilir Temizlik Ekibiyle Tanışın">
     <meta property="og:description" content="Evinizi kime emanet ettiğiniz önemlidir. VIP Temizlik ailesini ve hizmet standartlarımızı yakından inceleyin.">
-    <meta property="og:image" content="https://www.viptemizlikankara.comimg/hakkimizda-kapak.jpg">
+    <meta property="og:image" content="https://www.viptemizlikankara.comimg/sincanprofesyonelevtemizligi.webp">
     <meta property="og:url" content="https://www.viptemizlikankara.com/hakkimizda.html">
     <meta property="og:type" content="website">
     
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/viptemizlikankara.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <script type="application/ld+json">
