--- a/hizmetlerimiz.html
+++ b/hizmetlerimiz.html
@@ -21,11 +21,11 @@
     
     <meta property="og:title" content="Profesyonel Temizlik Çözümleri | VIP Temizlik Ankara">
     <meta property="og:description" content="Ev, ofis, villa ve iş yerleriniz için sunduğumuz tüm temizlik hizmetlerini ve detaylarını inceleyin.">
-    <meta property="og:image" content="https://www.viptemizlikankara.comimg/hizmetler-kapak.jpg">
+    <meta property="og:image" content="https://www.viptemizlikankara.comimg/temizlikhizmleteri.webp">
     <meta property="og:url" content="https://www.viptemizlikankara.com/hizmetlerimiz.html">
     <meta property="og:type" content="website">
     
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/viptemizlikankara.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <script type="application/ld+json">
