--- a/iletisim.html
+++ b/iletisim.html
@@ -20,11 +20,11 @@
     
     <meta property="og:title" content="Bize Ulaşın | VIP Temizlik Ankara">
     <meta property="og:description" content="Temizlik ihtiyacınız mı var? 7/24 Destek hattımızla bir telefon uzağınızdayız. Konum ve iletişim bilgileri için tıklayın.">
-    <meta property="og:image" content="https://www.viptemizlikankara.comimg/iletisim-paylasim-resmi.jpg">
+    <meta property="og:image" content="https://www.viptemizlikankara.comimg/etimesguttemizlik.webp">
     <meta property="og:url" content="https://www.viptemizlikankara.com/iletisim.html">
     <meta property="og:type" content="website">
     
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/viptemizlikankara.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 <script type="application/ld+json">
