--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <meta property="og:url" content="https://www.viptemizlikankara.com/">
     <meta property="og:title" content="VIP Temizlik Ankara - Hijyende Lüks Standartlar">
     <meta property="og:description" content="Eviniz ve ofisiniz için %100 garantili profesyonel temizlik. Ankara'nın her yerine hizmet.">
-    <meta property="og:image" content="https://www.viptemizlikankara.comimg/paylasim-gorseli.jpg">
+    <meta property="og:image" content="https://www.viptemizlikankara.comimg/koyutemizlik.jpg">
     <meta property="og:locale" content="tr_TR">
     <meta property="og:site_name" content="VIP Temizlik Ankara">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="VIP Temizlik Ankara">
     <meta name="twitter:description" content="Ankara'nın 1 numaralı temizlik şirketi ile tanışın.">
-    <meta name="twitter:image" content="https://www.viptemizlikankara.comimg/paylasim-gorseli.jpg">
+    <meta name="twitter:image" content="https://www.viptemizlikankara.comimg/koyutemizlik.jpg">
 
     <meta name="theme-color" content="#005B99"> <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -35,7 +35,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&display=swap" rel="stylesheet">
     
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/viptemizlikankara.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <script type="application/ld+json">
