--- a/camsilmetuyolari.html
+++ b/camsilmetuyolari.html
@@ -17,15 +17,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/viptemizlikankara.png">
 
-    <link rel="canonical" href="https://www.viptemizlikankara.com/cam-temizligi-ipuclari.html" />
+    <link rel="canonical" href="https://www.viptemizlikankara.com/camsilmetuyolari.html" />
     
     <meta property="og:type" content="article">
     <meta property="og:title" content="Camlarınız Kristal Gibi Parlasın: İzsiz Temizlik Rehberi">
     <meta property="og:description" content="Güneşi evinize davet edin. Cam temizliğinde yapılan yanlışları ve doğruları anlattık.">
     <meta property="og:image" content="https://www.viptemizlikankara.comimg/camtemizliginasilyapilir.webp">
-    <meta property="og:url" content="https://www.viptemizlikankara.com/cam-temizligi-ipuclari.html">
+    <meta property="og:url" content="https://www.viptemizlikankara.com/camsilmetuyolari.html">
     <meta property="og:site_name" content="VIP Temizlik Ankara">
     
     <meta property="article:author" content="VIP Temizlik Uzmanları">
