--- a/haliyikamarehberi.html
+++ b/haliyikamarehberi.html
@@ -22,14 +22,14 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Halıdaki Zorlu Lekelere Kesin Çözüm Yöntemleri">
     <meta property="og:description" content="Halılarınızdaki lekeleri çıkarmak için profesyonel sırları açıkladık. Okumak için tıklayın.">
-    <meta property="og:image" content="https://www.viptemizlikankara.comimg/hali-leke-kapak.jpg">
+    <meta property="og:image" content="https://www.viptemizlikankara.comimg/haliyikamaankara.webp">
     <meta property="og:url" content="https://www.viptemizlikankara.com/haliyikamarehberi.html">
     <meta property="og:site_name" content="VIP Temizlik Ankara">
     
     <meta property="article:author" content="VIP Temizlik Ekibi">
     <meta property="article:published_time" content="2025-12-17">
 
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/viptemizlikankara.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <script type="application/ld+json">
