--- a/profesyoneltemizlik.html
+++ b/profesyoneltemizlik.html
@@ -225,6 +225,7 @@
                 <li><a href="hakkimizda.html">Hakkımızda</a></li>
                 <li><a href="hizmetlerimiz.html">Hizmetlerimiz</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </div>
 
