--- a/derztemizligi.html
+++ b/derztemizligi.html
@@ -65,12 +65,12 @@
 
     <div class="sabitButonlar">
     
-    <a href="tel:+905534733562" class="sabitLink tel">
+    <a href="tel:+905456861627" class="sabitLink tel">
         <i class="fa-solid fa-phone"></i>
         <span class="toolTip">Hemen Ara</span>
     </a>
 
-    <a href="https://wa.me/+905534733562?text=Merhaba,%20temizlik%20hizmeti%20hakkında%20bilgi%20almak%20istiyorum." target="_blank" class="sabitLink wp">
+    <a href="https://wa.me/+905456861627?text=Merhaba,%20temizlik%20hizmeti%20hakkında%20bilgi%20almak%20istiyorum." target="_blank" class="sabitLink wp">
         <i class="fa-brands fa-whatsapp"></i>
         <span class="toolTip">WhatsApp</span>
     </a>
@@ -189,8 +189,8 @@
                 <h3>Derz Aralarındaki Kirden Kurtulun</h3>
                 <p>Buhar teknolojisiyle kimyasalsız, kazımasız ve %100 beyazlık garantisi.</p>
             <div class="ctaButtons">
-                <a href="tel:+905534733562" class="ctaBtn primary"><i class="fa-solid fa-phone"></i> Hemen Arayın</a>
-                <a href="https://wa.me/+905534733562" class="ctaBtn secondary"><i class="fa-brands fa-whatsapp"></i> WhatsApp'tan Yazın</a>
+                <a href="tel:+905456861627" class="ctaBtn primary"><i class="fa-solid fa-phone"></i> Hemen Arayın</a>
+                <a href="https://wa.me/+905456861627" class="ctaBtn secondary"><i class="fa-brands fa-whatsapp"></i> WhatsApp'tan Yazın</a>
             </div>
          </div>
         </div>
@@ -203,7 +203,7 @@
             <p>Ankara'nın en köklü ve güvenilir temizlik şirketi. Eviniz ve ofisiniz için %100 hijyen garantili, profesyonel çözümler sunuyoruz.</p>
             <div class="socialLinks">
                 <a href="https://www.instagram.com/ankarasihirlitemizlik" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://wa.me/905534733562" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://wa.me/905456861627" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
 
@@ -239,7 +239,7 @@
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-phone"></i>
-                <span>+90 553 473 3562</span>
+                <span>+90 545 686 16 27</span>
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-envelope"></i>
