--- a/haliyikamarehberi.html
+++ b/haliyikamarehberi.html
@@ -67,12 +67,12 @@
 
     <div class="sabitButonlar">
     
-    <a href="tel:+905534733562" class="sabitLink tel">
+    <a href="tel:+905456861627" class="sabitLink tel">
         <i class="fa-solid fa-phone"></i>
         <span class="toolTip">Hemen Ara</span>
     </a>
 
-    <a href="https://wa.me/+905534733562?text=Merhaba,%20temizlik%20hizmeti%20hakkında%20bilgi%20almak%20istiyorum." target="_blank" class="sabitLink wp">
+    <a href="https://wa.me/+905456861627?text=Merhaba,%20temizlik%20hizmeti%20hakkında%20bilgi%20almak%20istiyorum." target="_blank" class="sabitLink wp">
         <i class="fa-brands fa-whatsapp"></i>
         <span class="toolTip">WhatsApp</span>
     </a>
@@ -186,37 +186,14 @@
             <blockquote>
                 "DİKKAT: Halınız ipek, el dokuma veya Nepal halısı ise kesinlikle kimyasal veya sirke kullanmayın. Bu tür değerli halılar için mutlaka VIP Temizlik Ankara profesyonel ekibinden destek alın."
             </blockquote>
-
-            <h2>3. Neden "Yerinde Halı Yıkama" Hizmeti Almalısınız?</h2>
-            <p>
-                Evdeki yöntemler sadece yüzeyi temizler. Halının dibine çöken toz akarları, bakteriler ve inatçı leke kalıntıları zamanla koku yapar ve sağlığınızı tehdit eder. İşte tam bu noktada, <strong>VIP Temizlik Ankara</strong> farkı devreye girer.
-            </p>
-            <p>
-                Kullandığımız <strong>sanayi tipi vakum makineleri</strong> ve <strong>buharlı yıkama teknolojisi</strong> ile halılarınızı evinizden çıkarmadan, yerinde yıkıyoruz. Bu işlem sırasında:
-            </p>
-            <ul class="articleList">
-                <li>Halılarınızın rengi solmaz, dokusu bozulmaz.</li>
-                <li>Yüksek vakum gücü sayesinde halılarınız 4-6 saat içinde kurur.</li>
-                <li>%100 organik şampuanlarla alerjik bünyeler ve bebekli evler için güvenli temizlik sağlanır.</li>
-            </ul>
-
-            <h2>4. Ankara'nın Tüm İlçelerinde Hizmetinizdeyiz</h2>
-            <p>
-                VIP Temizlik olarak hizmet ağımız sadece merkezle sınırlı değildir. <strong>Ankara'da halı yıkama</strong> ve <strong>detaylı ev temizliği</strong> denince akla gelen ilk firma olarak, şu bölgelerin tamamına ücretsiz servis ve keşif imkanı sunuyoruz:
-            </p>
             <p>
                 <strong>Çankaya, İncek, Çayyolu, Yaşamkent, Beytepe, Bilkent:</strong> Lüks konut ve villa temizliğinde uzman kadromuzla hizmetinizdeyiz. <br>
                 <strong>Keçiören, Etlik, Yenimahalle, Batıkent, Demetevler:</strong> Apartman daireleri için hızlı ve ekonomik çözümler sunuyoruz. <br>
                 <strong>Etimesgut, Eryaman, Bağlıca, Sincan:</strong> Genişleyen Ankara'nın her noktasına aynı gün ekip yönlendiriyoruz. <br>
                 <strong>Gölbaşı, Mamak, Altındağ, Pursaklar:</strong> Mesafeleri sorun etmeden, kalitemizi kapınıza getiriyoruz.
             </p>
-
-            <h2>Sonuç: Halınızı Riske Atmayın</h2>
             <p>
-                Halı, bir evin makyajıdır. Yanlış deterjan kullanımı, halınızda geri dönüşü olmayan yanıklara veya renk bozulmalarına yol açabilir. 15 yıllık tecrübemiz, <strong>sigortalı temizlik personeli</strong> kadromuz ve müşteri memnuniyeti garantimizle halılarınızı bize emanet edin.
-            </p>
-            <p>
-                Siz kahvenizi keyifle yudumlarken, biz halılarınızı ilk günkü temizliğine kavuşturalım. <strong>Ankara en iyi temizlik şirketi</strong> arayışınızda VIP Temizlik her zaman yanınızda.
+   <strong>Ankara en iyi temizlik şirketi</strong> arayışınızda VIP Temizlik her zaman yanınızda.
             </p>
 
             </div>
@@ -225,8 +202,8 @@
                 <h3>İnatçı Lekelerle Vedalaşma Zamanı!</h3>
                 <p>Çankaya'dan Sincan'a tüm Ankara'da, profesyonel yerinde halı yıkama hizmeti için hemen randevu alın.</p>
             <div class="ctaButtons">
-                <a href="tel:+905534733562" class="ctaBtn primary"><i class="fa-solid fa-phone"></i> Hemen Arayın</a>
-                <a href="https://wa.me/+905534733562" class="ctaBtn secondary"><i class="fa-brands fa-whatsapp"></i> WhatsApp'tan Yazın</a>
+                <a href="tel:+905456861627" class="ctaBtn primary"><i class="fa-solid fa-phone"></i> Hemen Arayın</a>
+                <a href="https://wa.me/+905456861627" class="ctaBtn secondary"><i class="fa-brands fa-whatsapp"></i> WhatsApp'tan Yazın</a>
             </div>
          </div>
         </div>
@@ -240,7 +217,7 @@
             <p>Ankara'nın en köklü ve güvenilir temizlik şirketi. Eviniz ve ofisiniz için %100 hijyen garantili, profesyonel çözümler sunuyoruz.</p>
             <div class="socialLinks">
                 <a href="https://www.instagram.com/ankarasihirlitemizlik" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://wa.me/905534733562" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://wa.me/905456861627" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
 
@@ -276,7 +253,7 @@
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-phone"></i>
-                <span>+90 553 473 3562</span>
+                <span>+90 545 686 16 27</span>
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-envelope"></i>
