--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   "image": "https://www.viptemizlikankara.comimg/viptemizlikankara.png",
   "@id": "https://www.viptemizlikankara.com",
   "url": "https://www.viptemizlikankara.com",
-  "telephone": "+905534733562",
+  "telephone": "+905456861627",
   "address": {
     "@type": "PostalAddress",
     "streetAddress": "Alsancak, 2138. Sk. No:19, D:11, 06790 Etimesgut/Ankara",
@@ -83,12 +83,12 @@
 
     <div class="sabitButonlar">
     
-    <a href="tel:+905534733562" class="sabitLink tel">
+    <a href="tel:+905456861627" class="sabitLink tel">
         <i class="fa-solid fa-phone"></i>
         <span class="toolTip">Hemen Ara</span>
     </a>
 
-    <a href="https://wa.me/+905534733562?text=Merhaba,%20temizlik%20hizmeti%20hakkında%20bilgi%20almak%20istiyorum." target="_blank" class="sabitLink wp">
+    <a href="https://wa.me/+905456861627?text=Merhaba,%20temizlik%20hizmeti%20hakkında%20bilgi%20almak%20istiyorum." target="_blank" class="sabitLink wp">
         <i class="fa-brands fa-whatsapp"></i>
         <span class="toolTip">WhatsApp</span>
     </a>
@@ -165,7 +165,7 @@
         <p>Yaşam alanlarınızın temizliğini şansa bırakmayın.</p>
 
         <div class="butonGrup">
-            <a href="tel:+905534733562" class="telButon">
+            <a href="tel:+905456861627" class="telButon">
                 <i class="fa-solid fa-phone"></i>
                 <span class="yazi">BİZİ ARAYIN</span>
             </a>
@@ -373,7 +373,7 @@
                  </div>
             </div>
             <div class="hizmetlerCard" data-aos="fade-up" data-aos-delay="400">
-                <h3>Koltuk & Halı Yıkama</h3>
+                <h3>Koltuk Yıkama</h3>
                 <p>Yerinde yıkama hizmetimizle inatçı leke ve bakterilere karşı derinlemesine temizlik.</p>
                 <div class="cardResim">
                 <img loading="eager" src="img/halıyıkamaankara.webp" alt="koltuk halı yıkama ankara">          
@@ -480,7 +480,7 @@
         Size özel temizlik planı oluşturmak için şimdi iletişime geçin.
             </p>
             <div class="ulasinButonGrup">
-                  <a href="tel:+905534733562" class="ulasinTelButon">
+                  <a href="tel:+905456861627" class="ulasinTelButon">
                       <span class="ulasin-ikon-kutu"><i class="fa-solid fa-phone"></i></span>
                       <span class="ulasinYazi">Hemen Randevu Alın</span>
                   </a>
@@ -541,7 +541,7 @@
             <p>Ankara'nın en köklü ve güvenilir temizlik şirketi. Eviniz ve ofisiniz için %100 hijyen garantili, profesyonel çözümler sunuyoruz.</p>
             <div class="socialLinks">
                 <a href="https://www.instagram.com/ankarasihirlitemizlik" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://wa.me/905534733562" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://wa.me/905456861627" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
 
@@ -577,7 +577,7 @@
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-phone"></i>
-                <span>+90 553 473 3562</span>
+                <span>+90 545 686 16 27</span>
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-envelope"></i>
