--- a/hizmetlerimiz.html
+++ b/hizmetlerimiz.html
@@ -36,7 +36,7 @@
   "image": "https://www.viptemizlikankara.comimg/viptemizlikankara.png",
   "@id": "https://www.viptemizlikankara.com/hizmetlerimiz",
   "url": "https://www.viptemizlikankara.com/hizmetlerimiz",
-  "telephone": "+905534733562",
+  "telephone": "+905456861627",
   "address": {
     "@type": "PostalAddress",
     "streetAddress": "Alsancak, 2138. Sk. No:19, D:11, 06790 Etimesgut/Ankara",
@@ -72,12 +72,12 @@
 
     <div class="sabitButonlar">
     
-    <a href="tel:+905534733562" class="sabitLink tel">
+    <a href="tel:+905456861627" class="sabitLink tel">
         <i class="fa-solid fa-phone"></i>
         <span class="toolTip">Hemen Ara</span>
     </a>
 
-    <a href="https://wa.me/+905534733562?text=Merhaba,%20temizlik%20hizmeti%20hakkında%20bilgi%20almak%20istiyorum." target="_blank" class="sabitLink wp">
+    <a href="https://wa.me/+905456861627?text=Merhaba,%20temizlik%20hizmeti%20hakkında%20bilgi%20almak%20istiyorum." target="_blank" class="sabitLink wp">
         <i class="fa-brands fa-whatsapp"></i>
         <span class="toolTip">WhatsApp</span>
     </a>
@@ -137,7 +137,7 @@
                 <h1>Yaşam Alanlarınız İçin<br> <span class="highlightBlue">Kusursuz Temizlik Çözümleri</span></h1>
                 <p>
                      Ankara'da <strong>ev temizliği</strong>, <strong>kurumsal ofis hijyeni</strong>, <strong>inşaat sonrası temizlik</strong> ve 
-       <strong>dış cephe cam temizliği, </strong><strong>koltuk, halı yıkama </strong><strong>iş yeri temizliği </strong>ihtiyaçlarınız tek çatı altında. <strong>Uzman ekibimiz</strong> ve endüstriyel makinelerimizle, 
+       <strong>dış cephe cam temizliği, </strong><strong>koltuk yıkama, </strong><strong>iş yeri temizliği </strong>ihtiyaçlarınız tek çatı altında. <strong>Uzman ekibimiz</strong> ve endüstriyel makinelerimizle, 
        Çankaya'dan Eryaman'a kadar şehrin her noktasına <strong>%100 hijyen garantisi</strong> taşıyoruz. 
        Siz kahvenizi yudumlarken, biz yaşam alanınızı <strong>ilk günkü ışıltısına</strong> kavuşturalım.
                 </p>
@@ -274,7 +274,7 @@
             <p>Ankara'nın en köklü ve güvenilir temizlik şirketi. Eviniz ve ofisiniz için %100 hijyen garantili, profesyonel çözümler sunuyoruz.</p>
             <div class="socialLinks">
                 <a href="https://www.instagram.com/ankarasihirlitemizlik" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://wa.me/905534733562" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://wa.me/905456861627" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
 
@@ -310,7 +310,7 @@
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-phone"></i>
-                <span>+90 553 473 3562</span>
+                <span>+90 545 686 16 27</span>
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-envelope"></i>
