--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -2,6 +2,18 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMXFV3S4GV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMXFV3S4GV');
+</script>
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Hakkımızda & Biz Kimiz? | VIP Temizlik Ankara | 15 Yıllık Güven ve Tecrübe</title>
@@ -66,6 +78,18 @@
   "priceRange": "₺₺"
 }
 </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMXFV3S4GV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMXFV3S4GV');
+</script>
+
+
 </head>
 <body>
 
