--- a/hizmetlerimiz.html
+++ b/hizmetlerimiz.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMXFV3S4GV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMXFV3S4GV');
+</script>
+
 <meta charset="UTF-8">
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,6 +78,7 @@
   "priceRange": "₺₺"
 }
 </script>
+
 </head>
 <body>
 
