--- a/koltuktemizligi.html
+++ b/koltuktemizligi.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMXFV3S4GV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YMXFV3S4GV');
+</script>
+
+
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -60,6 +72,7 @@
       "dateModified": "2025-12-17"
     }
     </script>
+
 </head>
 <body>
 
