--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -162,7 +162,7 @@
     <strong>2010 yılından beri</strong> Ankara'nın her noktasına hijyen ve güven taşıyoruz. 
     <strong>Eğitimli kadromuz</strong>, son teknoloji ekipmanlarımız ve <strong>%100 müşteri memnuniyeti</strong> ilkemizle, 
     yaşam alanlarınıza değer katmak için buradayız. Bizim için temizlik sadece kirleri yok etmek değil, 
-    <strong>sağlıklı bir yaşam alanı</strong> yaratmaktır.
+    <strong>sağlıklı bir yaşam alanı</strong> yaratmaktır.Ankara'nın genelinde; Çankaya, Sincan, Yenikent, Keçiören, Yenimahalle, Mamak ve Etimesgut bölgelerinde profesyonel ev ve ofis temizliği hizmeti sunuyoruz.
 </p>
             </div>
             <div class="about-hero-image">
