--- a/iletisim.html
+++ b/iletisim.html
@@ -193,7 +193,7 @@
             <h3>Hemen Teklif Al</h3>
             <p>Formu doldurun, sizi hemen arayalım.</p>
 
-            <form action="https://formspree.io/f/mqarrylv" method="POST" class="contactForm" id="ajaxForm">
+            <form action="https://formspree.io/f/mlgrkqny" method="POST" class="contactForm" id="ajaxForm">
                
                <div class="formGrup">
                   <input type="text" name="adsoyad" placeholder="Adınız Soyadınız" required>
@@ -275,7 +275,7 @@
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-envelope"></i>
-                <span>ankaratemizlikev@gmail.com</span>
+                <span>viptemizlikankara@gmail.com</span>
             </div>
         </div>
 
