--- a/tuytemizligi.html
+++ b/tuytemizligi.html
@@ -255,7 +255,7 @@
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-envelope"></i>
-                <span>ankaratemizlikev@gmail.com</span>
+                <span>viptemizlikankara@gmail.com</span>
             </div>
         </div>
 
