--- a/blog.html
+++ b/blog.html
@@ -311,7 +311,7 @@
             </div>
             <div class="contactRow">
                 <i class="fa-solid fa-envelope"></i>
-                <span>ankaratemizlikev@gmail.com</span>
+                <span>viptemizlikankara@gmail.com</span>
             </div>
         </div>
 
