--- a/blog.html
+++ b/blog.html
@@ -167,7 +167,7 @@
         <article class="blogCard" data-aos="fade-up" data-aos-delay="100">
             <div class="blogImg">
                 <img loading="lazy" src="img/nedentemizliksirketi.webp" alt="Ankara profesyonel temizlik şirketi">
-                <span class="katagoriEtiketi">Kurumsal</span>
+                <span class="katagoriEtiketi">Hakkımızda</span>
             </div>
             <div class="blogContent">
                 <h3>Neden Profesyonel Şirket Seçmelisiniz?</h3>
