--- a/evtemizligirehber.html
+++ b/evtemizligirehber.html
@@ -198,7 +198,7 @@
 
                 <h2>4. Hizmet Bölgelerimiz ve Randevu</h2>
                 <p>
-                    Ankara'nın en işlek caddelerinden en sakin banliyölerine kadar her yere ulaşıyoruz. <strong>Bahçelievler, Emek, Balgat, Öveçler, Sokullu, Cevizlidere</strong> ve tüm çevre semtlerde, referanslı ve sigortalı personelimizle hizmet veriyoruz. Eşyalı dairelerinizde eşyalarınıza zarar gelmemesi için firmamız kurumsal güvence sunar.
+                    Ankara'nın en işlek caddelerinden en sakin banliyölerine kadar her yere ulaşıyoruz. <strong>Bahçelievler, Emek, Balgat, Öveçler, Sokullu, Cevizlidere</strong> ve tüm çevre semtlerde, referanslı ve sigortalı personelimizle hizmet veriyoruz. Eşyalı dairelerinizde eşyalarınıza zarar gelmemesi için firmamız Hakkımızda güvence sunar.
                 </p>
 
                 <h2>Sonuç: Kendinize Zaman Ayırın</h2>
