--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
          </div>
          <div class="statCard" data-aos="fade-up" data-aos-delay="200">
             <strong>1000+</strong>
-            <span>Kurumsal Müşteri</span>
+            <span>Hakkımızda Müşteri</span>
          </div>
          <div class="statCard" data-aos="fade-up" data-aos-delay="300">
             <strong>99.8%</strong>
@@ -362,7 +362,7 @@
 
             <div class="hizmetlerCard" data-aos="fade-up" data-aos-delay="100">
                 <h3>Ofis & İş Yeri Temizliği</h3>
-                <p>Daha verimli bir çalışma ortamı için kurumsal ve periyodik ofis temizliği.</p>
+                <p>Daha verimli bir çalışma ortamı için Hakkımızda ve periyodik ofis temizliği.</p>
                 <div class="cardResim">
                 <img loading="eager" src="img/ofisişyeritemizlikankara.webp" alt="ofis işyeri temizlik ankara">          
                  </div>
@@ -521,7 +521,7 @@
         <article class="blogCard" data-aos="fade-up" data-aos-delay="200">
             <div class="blogImg">
                 <img loading="lazy" src="img/nedentemizliksirketi.webp" alt="Ankara profesyonel temizlik şirketi">
-                <span class="katagoriEtiketi">Kurumsal</span>
+                <span class="katagoriEtiketi">Hakkımızda</span>
             </div>
             <div class="blogContent">
                 <h3>Neden Profesyonel Şirket Seçmelisiniz?</h3>
