--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <meta property="og:image" content="https://www.viptemizlikankara.com/img/koyutemizlik.jpg">
     <meta property="og:locale" content="tr_TR">
     <meta property="og:site_name" content="VIP Temizlik Ankara">
+    <meta name="google-site-verification" content="zLbyvpjCOZ4Wv-tSV89hUswSPJPuhJdpOScxp2V9h7k" />
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="VIP Temizlik Ankara">
